finish user edit, update, index and destroy actions

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,5 +1,17 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-ozymandias:
-  name: Ozy Speakman
-  email: ozy@mandi.as
+scarlet:
+  name: Miss Scarlet
+  email: scarlet@example.com
   password_digest: <%= User.digest('password') %>
+  admin: true
+plum:
+  name: Professor Plum
+  email: plum@example.com
+  password_digest: <%= User.digest('password') %>
+
+<% 30.times do |n| %>
+user_<%= n %>:
+  name:  <%= "User #{n}" %>
+  email: <%= "user-#{n}@example.com" %>
+  password_digest: <%= User.digest('password') %>
+<% end %>
